<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <EditText
        android:id="@+id/edtPlace"
        android:layout_width="325dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <Spinner
        android:id="@+id/spnType"
        android:layout_width="310dp"
        android:layout_height="28dp"
        android:entries="@array/placeType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="392dp"
        android:text="@string/labelTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spnType"
        app:layout_constraintTop_toBottomOf="@+id/spnType"
        app:layout_constraintVertical_bias="0.3" />

    <CheckBox
        android:id="@+id/chkAccept"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:text="@string/acceptane"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rdGroupTime"
        app:layout_constraintTop_toBottomOf="@+id/rdGroupTime"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnShare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chkAccept"
        app:layout_constraintTop_toBottomOf="@+id/chkAccept"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtPlace"
        app:layout_constraintTop_toBottomOf="@+id/edtPlace"
        app:layout_constraintVertical_bias="0.07" />

    <RadioGroup
        android:id="@+id/rdGroupTime"
        android:layout_width="316dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rdMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeMonth" />

        <RadioButton
            android:id="@+id/rdSemester"
            android:layout_width="317dp"
            android:layout_height="46dp"
            android:text="@string/timeSemester" />

        <RadioButton
            android:id="@+id/rdYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeYear" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>